# screen-stream-capture

./: -  .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: -  Dockerfile  README.md  capture_test.py  device_manager.py  device_monitor.py  fmp4_muxer.py  h264_stream_session.py  h264_to_fmp4.py  main.py  pyproject.toml  scrcpy_client.py  scrcpy_process.py  sse_manager.py  stream_session.py  test_frag_every_frame.py  websocket_manager.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: capture.py  devices.py  events.py  healthz.py  latency.py  sessions.py  stream.py
backend/app/api/schemas/: __init__.py  device.py  session.py
backend/app/core/: config.py  logging.py
backend/app/models/: device.py
backend/app/services/: __init__.py  capture_manager.py  device_manager.py  device_monitor.py  device_registry.py  sse_manager.py  worker_registry.py
backend/scripts/: export_openapi.py  run_local.sh
backend/tests/: conftest.py  test_capture_decode_lifecycle.py  test_capture_mjpeg_parser.py  test_capture_wait_policy.py  test_capture_ws_api.py  test_devices_api.py  test_e2e_capture.py  test_events_sse_api.py  test_h264_unit_extractor.py  test_healthz_api.py  test_sessions_api.py  test_stream_ws_api.py
backend/tests/fixtures/: test_video.h264
docs/: api-reference.md  architecture.md  article-mse-vs-webcodecs.md  backend-openapi.md  capture-timeout-root-cause.md  late-join.md  mse-vs-webcodecs.md  openapi.json  screen-rotation.md  streaming-h264-end-to-end.md  webcodecs-implementation.md
examples/comparison-viewer/: README.md
examples/simple-viewer/backend/: Dockerfile  device_monitor.py  device_registry.py  main.py  models.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
instructions/: git-commit.md
scripts/: ensure-servers.sh  measure_latency.py  test_raw_stream.py  test_raw_stream.sh
work/direct_server_connection/: plan.md
work/latency-investigation/: measurement-log.txt  measurement-report.md  measurement-results.json  plan.md
(+29 files in other folders)
