[project]
name = "screen-stream-capture-backend"
version = "0.1.0"
description = "Screen Stream Capture official backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "android-screen-stream",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv.sources]
android-screen-stream = { path = "../packages/android-screen-stream", editable = true }
