[project]
name = "simple-viewer-backend"
version = "0.1.0"
description = "Simple Android screen viewer backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "models", "device_manager", "device_monitor", "device_registry", "sse_manager"]
